-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.4.0-rc1
Steps to reproduce:
- set QC's codemodel to use ClangCodeModel
- open tests/manual/cplusplus-tools project
- inside main.cpp find the method testCompleteSymbols()
- place cursor onto line
// Dummy::s - uncomment the line and trigger auto-completion of this expression
Current result:
- Proposal widget displays "switch" snippet
Note: this wasn't displayed (at least) until QC 3.3
| For Gerrit Dashboard: QTCREATORBUG-14181 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 109720,3 | Clang: Offer snippets only for global completion | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |