Clang: Offer snippets only for global completion

Task-number: QTCREATORBUG-14181
Change-Id: Ib9eee53f5398cb13643871d862876f329a2fd9ae
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>