src/plugins/clangcodemodel/clangcompletion.cpp
@@ -1061,7 +1061,8 @@ int ClangCompletionAssistProcessor::startCompletionInternal(const QString fileNa
     foreach (ClangAssistProposalItem *item, items.values())
         m_completions.append(item);
 
-    addSnippets();
+    if (m_model->m_completionOperator == T_EOF_SYMBOL)
+        addSnippets();
 
     return m_startPosition;
 }
